Fixes to ncbi form and readable error message.

--- a/genegraphics/src/app/ncbi-fetch/ncbi-fetch.component.scss
+++ b/genegraphics/src/app/ncbi-fetch/ncbi-fetch.component.scss
@@ -3,6 +3,7 @@
 }
 .editor-section-column{
   align-items: center;
+  max-width: 212px;
 }
 
 #error-message{
